<resources>
    <string name="app_name">DemoApk</string>

    <!-- ActivityDemoActivity  start-->
    <string name="testActivityLiftCycleBtn">Activity 生命周期演示</string>
    <!-- ActivityDemoActivity  end-->

    <!-- BroadcastsDemo  start-->
    <string name="datapersistence">存储路径：/data/data/(packagename)/files</string>
    <!-- BroadcastsDemo  end-->


    <!-- LayoutDemoActivity  start-->
    <string name="testTablayoutBtn">TabLayout测试</string>
    <!-- LayoutDemoActivity  end-->

    <!-- ListViewDemoActivity  start-->
    <string name="ListViewDemo_textTitle">ListView Tutorial</string>
    <string name="ListViewDemo_testArrayAdapter_Btn">ArrayAdapter：简单列表</string>
    <string name="ListViewDemo_testSimpleCursorAdapter_Btn">SimpleCursorAdapter：读取联系人</string>
    <string name="ListViewDemo_testSimpleAdapter_Btn">SimpleAdapter：带图片的列表</string>
    <string name="ListViewDemo_testMyAdapter_Btn">MyAdapter：自定义列表</string>
    <string name="ListViewDemo_testmyAdapter_more_Btn">More</string>
    <!-- ListViewDemoActivity  end-->

    <!-- MenuDemoActivity  start-->
    <string name="testMenuBtn">简单菜单显示</string>
    <!-- MenuDemoActivity  end-->

    <!-- SensorDemoActivity  start-->
    <string name="SensorDemo_testAls_Btn">环境光传感器</string>
    <string name="SensorDemo_TestAcceel_titletext">当前加速度值: </string>
    <string name="SensorDemo_testAccel_Btn">加速度传感器</string>
    <!-- SensorDemoActivity  end-->

    <!-- StatusBarDemoActivity  start-->
    <string name="testStaticHideBarBtn1">AppCompatActivity 隐藏状态栏</string>
    <string name="testStaticHideBarBtn2">Activity 隐藏状态栏</string>
    <string name="testDynamicStatusBarBtn">动态显示/隐藏状态栏</string>
    <!-- StatusBarDemoActivity  end-->

    <!-- WidgetDemoActivity  start-->
    <string name="WidgetDemo_TestWidgetSize_text"><p align="Center">
    看到有很多网友不太理解 dp、sp 和 px 的区别：<br />
    现在这里介绍一下 dp 和 sp。dp 也就是 dip。这个和 sp 基本类似。<br />
    如果设置表示长度、高度等属性时可以使用 dp 或 sp。<br />
    但如果设置字体，需要使用 sp。<br />
    dp是与密度无关，sp除了与密度无关外,还与 scale 无关。<br />
<br />
    如果屏幕密度为 160，这时dp和sp和px是一样的。1dp=1sp=1px，<br />
    但如果使用px作单位，如果屏幕大小不变（假设还是3.2寸），而屏幕密度变成了320。<br />
    那么原来TextView的宽度设成160px，在密度为320的3.2寸屏幕里看要比在密度为<br />
            160的3.2寸屏幕上看短了一半。<br />
    但如果设置成160dp或160sp的话。系统会自动将width属性值设置成320px的。也就是<br />
            160 * 320 / 160。其中320 / 160可称为密度比例因子。也就是说，如果使用dp和sp，<br />
    系统会根据屏幕密度的变化自动进行转换。 <br />

    下面看一下其他单位的含义 <br />
    px：表示屏幕实际的象素。例如，320*480的屏幕在横向有320个象素，在纵向有480个象素。<br />
    in：表示英寸，是屏幕的物理尺寸。每英寸等于2.54厘米。例如，形容手机屏幕大小，经常说，3.2（英）寸、3.5<br />
            （英）寸、4（英）寸就是指这个单位。这些尺寸是屏幕的对角线长度。如果手机的屏幕是3.2英寸，表示手机的屏幕<br />
            （可视区域）对角线长度是3.2*2.54 = 8.128厘米。读者可以去量一量自己的手机屏幕，看和实际的尺寸是否一致。 <br />
    mm：表示毫米，是屏幕的物理尺寸。 <br />
    px（Pixels ，像素）：对应屏幕上的实际像素点。例如，320*480的屏幕在横向有320个象素，在纵向有480个象素。 <br />
    in（Inches ，英寸）：屏幕物理长度单位。每英寸等于2.54厘米。例如，形容手机屏幕大小，经常说，3.2（英）寸、3.5（英）寸、<br />
            4（英）寸就是指这个单位。这些尺寸是屏幕的对角线长度。如果手机的屏幕是3.2英寸，表示手机的屏幕（可视区域）对角线<br />
    长度是3.2*2.54 = 8.128厘米。读者可以去量一量自己的手机屏幕，看和实际的尺寸是否一致。 <br />
<br />
    mm（Millimeters ，毫米）：屏幕物理长度单位。 <br />
    pt（Points ，磅）：屏幕物理长度单位, 表示一个点，是屏幕的物理尺寸。大小为1英寸的1/72<br />。
    dp（与密度无关的像素）：逻辑长度单位，在 160 dpi 屏幕上，1dp=1px=1/160英寸。随着密度变化，对应的像素数量也变化，但<br />
    并没有直接的变化比例。 <br />
    dip：与dp相同，多用于Google示例中。 <br />
    sp（与密度和字体缩放度无关的像素）：与dp类似，但是可以根据用户的字体大小首选项进行缩放。 <br />
<br />
    尽量使用 dp 作为空间大小单位，sp 作为和文字相关大小单位 <br /></p></string>
    <string name="title_activity_broadcasts_demo">BroadcastsDemoActivity</string>
    <!-- WidgetDemoActivity  end-->

</resources>
