<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListViewDemo_textTitle"
        />


    <Button
        android:id="@+id/mylistview_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/ListViewDemo_testArrayAdapter_Btn" />

    <Button
        android:id="@+id/simpleCursorAdapter_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/ListViewDemo_testSimpleCursorAdapter_Btn" />

    <Button
        android:id="@+id/simpleAdapter_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/ListViewDemo_testSimpleAdapter_Btn"
        />

    <Button
        android:id="@+id/myAdapter_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/ListViewDemo_testMyAdapter_Btn"
        />

    <Button
        android:id="@+id/testUIChatBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="聊天界面"
        />
</LinearLayout>

